<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mazpiss.skripsi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

        <action
            android:id="@+id/action_homeFragment_to_aboutActivity"
            app:destination="@id/aboutActivity" />
    />

    <fragment
        android:id="@+id/navigation_materi"
        android:name="com.mazpiss.skripsi.ui.materi.MateriFragment"
        android:label="@string/title_materi"
        tools:layout="@layout/fragment_materi" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.mazpiss.skripsi.ui.test.TestFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_tentang"
        android:name="com.mazpiss.skripsi.ui.kosakata_fragment.KosakataFragment"
        android:label="@string/title_tentang"
        tools:layout="@layout/fragment_tentang" />



    <activity
        android:id="@+id/aboutActivity"
        android:name="com.mazpiss.skripsi.ui.aboutApp.AboutActivity"
        android:label="AboutActivity"
        tools:layout="@layout/activity_about"/>

    <activity
        android:id="@+id/quizTest"
        android:name="com.mazpiss.skripsi.ui.quiz.QuizActivity"
        android:label="quizTest" />


</navigation>