<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvKosakata1"
            style="@style/textReguler"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:background="@color/blue_900"
            android:gravity="center"
            android:text="@string/arab"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvTerjemahan1"
            style="@style/textReguler"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/latin" />

        <TextView
            android:id="@+id/tvKosakata2"
            style="@style/textReguler"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_900"
            android:gravity="center"
            android:text="@string/terjemahan"
            android:textColor="@color/white" />

    </LinearLayout>

