<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_50"
    tools:context=".ui.kosakata_fragment.KosakataFragment">

    <include
        android:id="@+id/custom_toolbar"
        layout="@layout/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/textBold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_400"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/terjemahan"
            android:textColor="@color/white" />

        <TextView
            style="@style/textBold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/latin" />

        <TextView
            style="@style/textBold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_400"
            android:gravity="center"
            android:text="@string/arab"
            android:textColor="@color/white" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvKosakata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        tools:itemCount="140"
        tools:listitem="@layout/item_kosakata" />


</LinearLayout>
