<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_50"
    tools:context=".ui.kosakata_fragment.KosakataFragment">

    <include
        android:id="@+id/custom_toolbar"
        layout="@layout/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/box_deskripsi_aplikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/line_box"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar">

        <TextView
            android:id="@+id/text_deskirpsiAplikasi"
            style="@style/paragraf3Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/deskripsi_aplikasi" />

        <TextView
            android:id="@+id/text_subDeskripsi1"
            style="@style/textReguler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:justificationMode="inter_word"
            android:gravity="center"
            android:text="@string/sub_text_deskripsi1" />

        <TextView
            android:id="@+id/text_subDeskripsi2"
            style="@style/textReguler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:justificationMode="inter_word"
            android:layout_marginBottom="35dp"
            android:gravity="center"
            android:text="@string/sub_text_deskripsi2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/line_box"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/box_deskripsi_aplikasi">

        <TextView
            style="@style/paragraf3Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="Pengembang Aplikasi" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="84dp"
                android:layout_marginTop="20dp"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/aku"/>

            <TextView
                style="@style/textReguler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:justificationMode="inter_word"
                android:textAlignment="center"
                android:layout_marginBottom="35dp"
                android:text="@string/deskripsi_pengembang" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
